[package]
name = "solana-auction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.10.23"
spl-token = { version ="3.3.0" , features = ["no-entrypoint"]}
thiserror = "1.0.31"
arrayref = "0.3.6"

[lib]
crate-type = ["cdylib", "lib"]